.gitconfig: Use iso date for lol/lola.

--- a/.gitconfig
+++ b/.gitconfig
@@ -20,9 +20,9 @@
   #lol = log --graph --decorate --pretty=oneline --abbrev-commit
   #lola = log --graph --decorate --pretty=oneline --abbrev-commit --all
 
-  lol = log --graph --pretty=format:'%C(red bold)%h%Creset -%C(yellow bold)%d%Creset %s %C(green bold)(%cr) %C(bold cyan)<%an>%Creset' --abbrev-commit --date=relative --decorate
+  lol = log --graph --pretty=format:'%C(red bold)%h%Creset -%C(yellow bold)%d%Creset %s %C(green bold)(%cd) %C(bold cyan)<%an>%Creset' --abbrev-commit --decorate --date=iso
 
-  lola = log --graph --pretty=format:'%C(red bold)%h%Creset -%C(yellow bold)%d%Creset %s %C(green bold)(%cr) %C(bold cyan)<%an>%Creset' --abbrev-commit --date=relative --decorate --all
+  lola = log --graph --pretty=format:'%C(red bold)%h%Creset -%C(yellow bold)%d%Creset %s %C(green bold)(%cd) %C(bold cyan)<%an>%Creset' --abbrev-commit --decorate --date=iso --all
 
 [color]
   branch = auto
