--- a/.config/i3/config
+++ b/.config/i3/config
@@ -114,7 +114,9 @@ bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+
+# create new numeric workspace
+bindsym $mod+0 exec ~/bin/i3-new-ws.rb
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace 1
@@ -126,7 +128,9 @@ bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+
+# move to new numeric workspace
+bindsym $mod+Shift+0 exec ~/bin/i3-move-new-ws.rb
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
