--- a/.config/i3/config
+++ b/.config/i3/config
@@ -29,6 +29,9 @@ floating_modifier $mod
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+b exec firefox
 
+# application specifics
+for_window [class="Gkrellm"] floating enable
+
 # kill focused window
 bindsym $mod+Shift+q kill
 bindsym $mod+c kill
