.config/i3/config: mod+shift+b: file-browser.
(Put system specific symlink in ~/bin)

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -28,6 +28,7 @@ floating_modifier $mod
 # application shortcuts
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+b exec firefox
+bindsym $mod+Shift+b exec ~/bin/file-browser
 
 # application specifics
 for_window [class="Gkrellm"] floating enable
