--- a/.config/i3/config
+++ b/.config/i3/config
@@ -51,33 +51,36 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-# cursor keys changes workspace (on same output, like in awesome):
-bindsym $mod+Left  workspace prev_on_output
-bindsym $mod+Right workspace next_on_output
-
-# cursor keys + Control changes output
-bindsym $mod+Control+Left  focus output left
-bindsym $mod+Control+Up    focus output left
-bindsym $mod+Control+Down  focus output right
-bindsym $mod+Control+Right focus output right
-
 # shift moves focused window
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-# control+shift moves focused window to other outputs
-bindsym $mod+Control+Shift+h move to output left
-bindsym $mod+Control+Shift+j move to output down
-bindsym $mod+Control+Shift+k move to output up
-bindsym $mod+Control+Shift+l move to output right
+# cursor keys changes workspace (on same output, like in awesome):
+bindsym $mod+Left  workspace prev_on_output
+bindsym $mod+Right workspace next_on_output
 
-# control+shift+arrows moves workspace to other outputs
-bindsym $mod+Control+Shift+Left  move workspace to output left
-bindsym $mod+Control+Shift+Down  move workspace to output down
-bindsym $mod+Control+Shift+Up    move workspace to output up
-bindsym $mod+Control+Shift+Right move workspace to output right
+# control key is output modifier (Mod4=$mod)
+set $output-mod Mod4+control
+
+# vim keys changes output
+bindsym $output-mod+h focus output left
+bindsym $output-mod+j focus output left
+bindsym $output-mod+k focus output right
+bindsym $output-mod+l focus output right
+
+# $output-mod+shift moves focused window to other outputs
+bindsym $output-mod+Shift+h move to output left
+bindsym $output-mod+Shift+j move to output down
+bindsym $output-mod+Shift+k move to output up
+bindsym $output-mod+Shift+l move to output right
+
+# $output-mod+shift+cursor keys moves workspace to other outputs
+bindsym $output-mod+Shift+Left  move workspace to output left
+bindsym $output-mod+Shift+Down  move workspace to output down
+bindsym $output-mod+Shift+Up    move workspace to output up
+bindsym $output-mod+Shift+Right move workspace to output right
 
 # split in vertical orientation
 bindsym $mod+v split v
@@ -105,29 +108,29 @@ bindsym $mod+a focus parent
 bindsym $mod+x focus child
 
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
+bindsym $mod+1 workspace number 1
+bindsym $mod+2 workspace number 2
+bindsym $mod+3 workspace number 3
+bindsym $mod+4 workspace number 4
+bindsym $mod+5 workspace number 5
+bindsym $mod+6 workspace number 6
+bindsym $mod+7 workspace number 7
+bindsym $mod+8 workspace number 8
+bindsym $mod+9 workspace number 9
 
 # create new numeric workspace
 bindsym $mod+0 exec ~/bin/i3-new-ws.rb
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+1 move container to workspace number 1
+bindsym $mod+Shift+2 move container to workspace number 2
+bindsym $mod+Shift+3 move container to workspace number 3
+bindsym $mod+Shift+4 move container to workspace number 4
+bindsym $mod+Shift+5 move container to workspace number 5
+bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+7 move container to workspace number 7
+bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+9 move container to workspace number 9
 
 # move to new numeric workspace
 bindsym $mod+Shift+0 exec ~/bin/i3-move-new-ws.rb
