--- a/.config/i3/config
+++ b/.config/i3/config
@@ -25,6 +25,19 @@ font pango:DejaVu Sans Mono 10
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
 
+# Hiding the borders that are adjacent to the edge of the screen looks nice,
+# but removes the vertical/horizontal hint when placing new windows.
+#hide_edge_borders <none|vertical|horizontal|both>
+#hide_edge_borders both
+
+# Window header + 1px border:
+new_window normal 1
+# No header, px border:
+#new_window pixel 1
+
+# Focusing the current workspace will go back to previous workspace:
+workspace_auto_back_and_forth yes
+
 # application shortcuts
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+b exec firefox
