.config/i3/config: More floats.

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -45,6 +45,8 @@ bindsym $mod+Shift+b exec ~/bin/file-browser
 
 # application specifics
 for_window [class="Gkrellm"] floating enable
+for_window [class="Volumeicon"] floating enable
+for_window [class="Gnome-calculator"] floating enable
 
 # lowercase "spotify" only applies to the login dialog, which is intended.
 for_window [title="spotify"] floating enable
