--- a/.config/i3/config
+++ b/.config/i3/config
@@ -29,6 +29,7 @@ floating_modifier $mod
 # but removes the vertical/horizontal hint when placing new windows.
 #hide_edge_borders <none|vertical|horizontal|both>
 #hide_edge_borders both
+hide_edge_borders vertical
 
 # Window header + 1px border:
 new_window normal 1
