--- a/.config/i3/config
+++ b/.config/i3/config
@@ -57,10 +57,9 @@ bindsym $mod+Shift+b exec ~/bin/file-browser
 bindsym control+$alt+l exec ~/bin/screenlock
 
 # ... and this too (pulseaudio/media hotkeys):
-set $sink 1
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume $sink -- +3%
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume $sink -- -3%
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute $sink toggle
+bindsym XF86AudioRaiseVolume exec --no-startup-id ~/bin/volup
+bindsym XF86AudioLowerVolume exec --no-startup-id ~/bin/voldown
+bindsym XF86AudioMute exec --no-startup-id ~/bin/volmutetoggle
 
 # application specifics
 for_window [class="Gkrellm"] floating enable
