--- a/.config/i3/config
+++ b/.config/i3/config
@@ -64,6 +64,7 @@ bindsym XF86AudioLowerVolume exec --no-startup-id ~/bin/voldown
 bindsym XF86AudioMute exec --no-startup-id ~/bin/volmutetoggle
 
 bindsym XF86Calculator exec ~/bin/calculator
+bindsym XF86Favorites exec ~/bin/screenshot
 
 # application specifics
 for_window [class="Gkrellm"] floating enable
