--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,12 @@
 [submodule ".config/awesome/revelation"]
-	path = .config/awesome/revelation
-	url = git://github.com/bioe007/awesome-revelation.git
+  path = .config/awesome/revelation
+  url = git://github.com/bioe007/awesome-revelation.git
 [submodule ".vim/bundle/rust.vim"]
-	path = .vim/bundle/rust.vim
-	url = https://github.com/wting/rust.vim.git
+  path = .vim/bundle/rust.vim
+  url = https://github.com/wting/rust.vim.git
 [submodule ".vim/bundle/vim-slim"]
   path = .vim/bundle/vim-slim
   url = https://github.com/slim-template/vim-slim.git
+[submodule ".vim/bundle/nerdtree"]
+  path = .vim/bundle/nerdtree
+  url = https://github.com/scrooloose/nerdtree.git
